--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,315 @@
 </head>
 
 <body>
+    <section class="hero">
+        <header class="header">
+            <nav class="nav header__nav nav--js">
+                <ul class="nav__menu">
+                    <li class="nav__item">
+                        <a class="nav__link header__link" href="#">
+                            <span class="nav__text header__text">Home</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link header__link" href="#">
+                            <span class="nav__text header__text">About</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link header__link" href="#">
+                            <span class="nav__text header__text">Menu</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link header__link" href="#">
+                            <span class="nav__text header__text">Reservation</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <a href="#" class="header__logo logo">
+                <img src="" alt="">
+            </a>
+            <ul class="controls header__controls">
+                <li class="controls__item">
+                    <a class="controls__link header__link" href="#">
+                        <span class="header__text">Pages</span>
+                    </a>
+                </li>
+                <li class="controls__item controls__item--search">
+                    <a class="controls__link header__link" href="#">
+                        <span class="header__text">Shop</span>
+                    </a>
+                </li>
+                <li class="controls__item">
+                    <a class="controls__link header__link" href="#">
+                        <span class="header__text">Contact</span>
+                    </a>
+                </li>
+                <li class="controls__item">
+                    <a class="controls__link header__link" href="#">
+                        <span class="header__icon">
 
-    <h2>New title</h2>
+                        </span>
+                    </a>
+                </li>
+                <li class="controls__item">
+                    <a class="controls__link header__link" href="#">
+                        <span class="header__icon">
 
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </header>
+        <div class="hero__wrapper">
+            <div class="container hero__container">
+                <div class="hero__wrap">
+                    <h1 class="hero__title">Enjoy Your Morning Coffee.</h1>
+                    <div class="hero__text">
+                        <p>The coofee is brewed by fist roasting the green coffee beans over hot coals in brazier. given to Opportunity</p>
+                    </div>
+                    <div class="hero__btn">
+                        <a href="#" target="blank" class="btn">Test Coffee</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <main class="main">
+        <section class="instruction">
+            <div class="container">
+                <ul class="instruction__list">
+                    <li class="instruction__item">
+                        <div class="instruction__wrap">
+                            <span class="instruction__number">01</span>
+                            <h3 class="instruction__title">Best Coffee Flavour</h3>
+                        </div>
+                        <div class="instruction__image">
+                            <img src="./image/instruction-1.png" alt="coffee">
+                        </div>
+                    </li>
+                    <li class="instruction__item">
+                        <div class="instruction__wrap">
+                            <span class="instruction__number">02</span>
+                            <h3 class="instruction__title">Place to get lost</h3>
+                        </div>
+                        <div class="instruction__image">
+                            <img src="./image/instruction-2.png" alt="coffee">
+                        </div>
 
+                    </li>
+                    <li class="instruction__item">
+                        <div class="instruction__wrap">
+                            <span class="instruction__number">03</span>
+                            <h3 class="instruction__title">Proper roesting</h3>
+                        </div>
+                        <div class="instruction__image">
+                            <img src="./image/instruction-3.png" alt="two cup of cofee">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="about-us">
+            <div class="container">
+                <div class="about-us__grid">
+                    <div class="about-us__grid-item-1">
+                        <div class="about-us__image">
+                            <img src="./image/about-us-1.png" alt="coffee">
+                        </div>
+                    </div>
+                    <div class="about-us__grid-item-2">
+                        <div class="about-us__image">
+                            <img src="./image/about-us-2.png" alt="coffee">
+                        </div>
+                    </div>
+                    <div class="about-us__grid-item-3">
+                        <div class="about-us__image">
+                            <img src="./image/about-us-3.png" alt="coffee">
+                        </div>
+                    </div>
+                    <div class="about-us__grid-item-4">
+                        <p class="about-us__subtitle">Our history</p>
+                        <h2 class="about-us__title">Create a <br> new story with us</h2>
+                        <div class="about-us__text">
+                            <p>mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nibh maximus, est eu, mattis nuce. preasent ut quam quis quam venen atis fringilla.
+                                morbi vastibulum id tells mmodo mattis. aliauam erat volutpal.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="products">
+            <div class="container">
+                <p class="products__subtitle">Popular Product</p>
+                <h2 class="products__title">Coffee popular Product</h2>
+                <div class="products__slider products__slider--js">
+                    <a href="#" class="products__slider-link">
+                        <div class="products__slider-body">
+                            <div class="products__slider-image">
+                                <img src="./image/product.png" alt="coffee">
+                            </div>
+                            <div class="products__slider-top">
+                                <span class="products__slider-text">Coffee</span>
+                                <ul class="products__stars">
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                </ul>
+                            </div>
+                            <h3 class="products__slider-title">brazil coffee gred</h3>
+                            <div class="products__slider-bottom">
+                                <p class="products__slider-price">Price - <span class="brown"> $320.00/ </span>$358</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="products__slider-link">
+                        <div class="products__slider-body">
+                            <div class="products__slider-image">
+                                <img src="./image/product.png" alt="coffee">
+                            </div>
+                            <div class="products__slider-top">
+                                <span class="products__slider-text">Coffee</span>
+                                <ul class="products__stars">
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                </ul>
+                            </div>
+                            <h3 class="products__slider-title">brazil coffee gred</h3>
+                            <div class="products__slider-bottom">
+                                <p class="products__slider-price">Price - <span class="brown">$320.00/ </span>$358</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="products__slider-link">
+                        <div class="products__slider-body">
+                            <div class="products__slider-image">
+                                <img src="./image/product.png" alt="coffee">
+                            </div>
+                            <div class="products__slider-top">
+                                <span class="products__slider-text">Coffee</span>
+                                <ul class="products__stars">
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                </ul>
+                            </div>
+                            <h3 class="products__slider-title">brazil coffee gred</h3>
+                            <div class="products__slider-bottom">
+                                <p class="products__slider-price">Price - <span class="brown"> $320.00/ </span>$358</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="products__slider-link">
+                        <div class="products__slider-body">
+                            <div class="products__slider-image">
+                                <img src="./image/product.png" alt="coffee">
+                            </div>
+                            <div class="products__slider-top">
+                                <span class="products__slider-text">Coffee</span>
+                                <ul class="products__stars">
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                    <li class="products__stars-item">
+                                        <img src="./image/star.svg" alt="star">
+                                    </li>
+                                </ul>
+                            </div>
+                            <h3 class="products__slider-title">brazil coffee gred</h3>
+                            <div class="products__slider-bottom">
+                                <p class="products__slider-price">Price - <span class="brown">$320.00/ </span>$358</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="products__btn">
+                    <a href="#" target="blank" class="btn">View all product</a>
+                </div>
+            </div>
+        </section>
+        <section class="technics">
+            <div class="container">
+                <div class="technics__wrap">
+                    <div class="technics__left">
+                        <div class="technics__image">
+                            <img src="./image/coffee-machine.png" alt="Coffee machine">
+                        </div>
+                    </div>
+                    <div class="technics__right">
+                        <h2 class="technics__title">Coffee machine, buy for home</h2>
+                        <div class="technics__text">
+                            <p>mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nib maximus, est eu, mattis nuce. preasent ut quam quis quam venen atis fri ngilla.
+                                morbi vastibulum id tells mmodo mattis. aliauam erat volutpal.</p>
+                        </div>
+                        <div class="technics__btn">
+                            <a href="#" target="blank" class="btn">Discover now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer"></footer>
     <script src="js/script.js"></script>
 </body>
 
