done new Menu section, started review section

--- a/src/index.html
+++ b/src/index.html
@@ -297,7 +297,7 @@
             </div>
         </section>
         <section class="technics">
-            <div class="container">
+            <div class="container technics__container">
                 <div class="technics__wrap">
                     <div class="technics__left">
                         <div class="technics__image">
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="technics__right">
-                        <h2 class="technics__title">Coffee machine, buy for home</h2>
+                        <h2 class="technics__title">Coffee <br>machine, buy for home</h2>
                         <div class="technics__text">
                             <p>mauris rhoncus in imperdiet placerat. vestibu emismd nisl suscirpit ligula volutpat, a feyguat urn maxmaus. cars massa nibhtincidunt. donec et nib maximus, est eu, mattis nuce. preasent ut quam quis quam venen atis fri ngilla.
                                 morbi vastibulum id tells mmodo mattis. aliauam erat volutpal.</p>
@@ -316,6 +316,132 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="menu">
+            <div class="container menu__container">
+                <p class="menu__subtitle brown">Menu</p>
+                <h2 class="menu__title">Coffee popular menu</h2>
+                <div class="menu__wrap">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-1.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-2.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-3.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-4.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-1.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-2.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-3.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                        <li class="menu__item">
+                                <img src="./image/coffee-menu-4.png" alt="coffee">
+                                <p class="menu__text">Americano rosted gred</p>
+                            <span class="menu__price brown">$12:00</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+        <div class="container reviews__container">
+            <p class="reviews__subtitle brown">Testimonial</p>
+            <h2 class="reviews__title">Says our customers</h2>
+            <div class="reviews__slider reviews__slider--js">
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-1.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">John Smith</p>
+                            <p class="reviews__position">Product Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-2.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">Brett Lee</p>
+                            <p class="reviews__position">User Experience Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         </section>
     </main>
     <footer class="footer"></footer>
