--- a/src/index.html
+++ b/src/index.html
@@ -440,8 +440,68 @@
                         </ul>
                     </div>
                 </div>
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-1.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">John Smith</p>
+                            <p class="reviews__position">Product Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
+        </section>
+        <section class="reservation">
+            <div class="container reservation__container">
+                <div class="reservation__wrapper">
+                    <div class="reservation__left"></div>
+                    <div class="reservation__right">
+                        <p class="reservation__subtitle brown">Reservation</p>
+                        <h2 class="reservation__title">Booking a table</h2>
+                        <form class="reservation__form" action="#">
+                            <div class="reservation__field-wrap">
+                                <div class="reservation__field">
+                                    <input name="text" type="text" required placeholder="4 person" class="reservation__input">
+                                </div>
+                                <div class="reservation__field">
+                                    <input name="date" type="text" required placeholder="12.25, 2020" class="reservation__input">
+                                    <!-- ВСТАВИТЬ КАЛЕНДАРЬ ЧЕРЕЗ ЖКВЕРИ http://t1m0n.name/air-datepicker/docs/index-ru.html AIR DATEPICKER -->
+                                </div>
+                                <div class="reservation__field">
+                                    <input name="time" type="text" required placeholder="11:00 AM" class="reservation__input">
+                                </div>
+                            </div>
+                            <button class="reservation__btn btn" type="submit">BOOK S TABLE</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer"></footer>
