--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 </ul>
             </nav>
             <a href="#" class="header__logo logo">
-                <img src="" alt="">
+                <img src="./image/Logo.png" alt="logo">
             </a>
             <ul class="controls header__controls">
                 <li class="controls__item">
@@ -58,14 +58,14 @@
                 <li class="controls__item">
                     <a class="controls__link header__link" href="#">
                         <span class="header__icon">
-
+                        <img src="./image/search.svg" alt="search">
                         </span>
                     </a>
                 </li>
                 <li class="controls__item">
                     <a class="controls__link header__link" href="#">
                         <span class="header__icon">
-
+                         <img src="./image/shopping-bag.svg" alt="shopping-bag">
                         </span>
                     </a>
                 </li>
@@ -474,6 +474,108 @@
                         </ul>
                     </div>
                 </div>
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-1.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">John Smith</p>
+                            <p class="reviews__position">Product Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-1.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">John Smith</p>
+                            <p class="reviews__position">Product Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="reviews__slider-item">
+                    <div class="reviews__top">
+                        <div class="reviews__avatar">
+                            <img src="./image/avatar-1.png" alt="avatar">
+                        </div>
+                        <div class="reviews__text">Education WP is a special build for effective education & Learning Management System site. Education WP is the next generation & one of the best education WordPress themes which all the strength of eLearning WP..</div>
+                    </div>
+                    <div class="reviews__bottom">
+                        <div class="reviews__wrap">
+                            <p class="reviews__name">John Smith</p>
+                            <p class="reviews__position">Product Designer</p>
+                        </div>
+                        <ul class="reviews__stars">
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                            <li class="reviews__stars-item">
+                                <img src="./image/star-yellow.svg" alt="star">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         </section>
@@ -500,6 +602,33 @@
                             <button class="reservation__btn btn" type="submit">BOOK S TABLE</button>
                         </form>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="container news__container">
+                <p class="news__subtitle brown">Testimonial</p>
+                <h2 class="news__title">Our latest news</h2>
+                <div class="news__slider news__slider--js">
+                    <a href="#" class="news__slider-link">
+                        <div class="news__slider-body">
+                            <div class="news__slider-image">
+                                <img src="./image/news-1.png" alt="coffee">
+                            </div>
+                            <div class="news__slider-top">
+                                <p class="news__by"> <span class="brown">By:</span>rasaline</p>
+                                <p class="news__date">23.01.2021</p>
+                            </div>
+                            <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
+                            <div class="news__slider-bottom">
+                             <span class="news__more">Read More</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
