done footer,finished markup

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="hero">
         <header class="header">
-            <nav class="nav header__nav nav--js">
+            <nav class="nav header__nav">
                 <ul class="nav__menu">
                     <li class="nav__item">
                         <a class="nav__link header__link" href="#">
@@ -615,17 +615,82 @@
                             <div class="news__slider-image">
                                 <img src="./image/news-1.png" alt="coffee">
                             </div>
-                            <div class="news__slider-top">
-                                <p class="news__by"> <span class="brown">By:</span>rasaline</p>
-                                <p class="news__date">23.01.2021</p>
+                            <div class="news__wrap">
+                                <div class="news__slider-top">
+                                    <p class="news__by"> <span class="brown">By:</span> rasaline</p>
+                                    <p class="news__date">23.01.2021</p>
+                                </div>
+                                <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
+                                <div class="news__slider-bottom">
+                                    <span class="news__more">Read More</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
                             </div>
-                            <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
-                            <div class="news__slider-bottom">
-                             <span class="news__more">Read More</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                    <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
+                        </div>
+                    </a>
+                    <a href="#" class="news__slider-link">
+                        <div class="news__slider-body">
+                            <div class="news__slider-image">
+                                <img src="./image/news-2.png" alt="coffee">
+                            </div>
+                            <div class="news__wrap">
+                                <div class="news__slider-top">
+                                    <p class="news__by"> <span class="brown">By:</span> rasaline</p>
+                                    <p class="news__date">23.01.2021</p>
+                                </div>
+                                <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
+                                <div class="news__slider-bottom">
+                                    <span class="news__more">Read More</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__slider-link">
+                        <div class="news__slider-body">
+                            <div class="news__slider-image">
+                                <img src="./image/news-3.png" alt="coffee">
+                            </div>
+                            <div class="news__wrap">
+                                <div class="news__slider-top">
+                                    <p class="news__by"> <span class="brown">By:</span> rasaline</p>
+                                    <p class="news__date">23.01.2021</p>
+                                </div>
+                                <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
+                                <div class="news__slider-bottom">
+                                    <span class="news__more">Read More</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="news__slider-link">
+                        <div class="news__slider-body">
+                            <div class="news__slider-image">
+                                <img src="./image/news-3.png" alt="coffee">
+                            </div>
+                            <div class="news__wrap">
+                                <div class="news__slider-top">
+                                    <p class="news__by"> <span class="brown">By:</span> rasaline</p>
+                                    <p class="news__date">23.01.2021</p>
+                                </div>
+                                <h3 class="news__slider-title">Ideal cocktails from barmen....</h3>
+                                <div class="news__slider-bottom">
+                                    <span class="news__more">Read More</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" stroke="#C99E71" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                        <path d="M1 12.0001L19 12.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12 5.00012L19 12.0001L12 19.0001"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -633,7 +698,70 @@
             </div>
         </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__wrap">
+                <a href="#" class="footer__logo logo">
+                    <img src="./image/Logo.png" alt="logo">
+                </a>
+                <nav class="nav footer__nav">
+                    <ul class="nav__menu">
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Home</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Reservation</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Menu</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">About</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Pages</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Shop</span>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a class="nav__link footer__link" href="#">
+                                <span class="nav__text footer__text">Blogs</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <form class="footer__form" action="#">
+                    <div class="footer__field-wrap">
+                        <div class="footer__field">
+                            <input name="text" type="email" required placeholder="Enter your email" class="footer__input">
+                        </div>
+                    </div>
+                    <button class="footer__btn" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" stroke="white" width="24" height="24" viewBox="0 0 24 24" fill="none">\n' +
+                            '\t<path d="M1 12.0001L19 12.0001" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>\n' +
+                            '\t<path d="M12 5.00012L19 12.0001L12 19.0001" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>\n' +
+                            '</svg>
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <span class="footer__copyright-text">e-Tennis &copy; 2021. All rights reserved.</span>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
